[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/StateMachine/player_fsm.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UIandUX/Healthbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player/CharacterRig.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61.1179, 118.735 )

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterRig:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "invulnerable"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterRig:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterRig:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0537279 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterRig:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0537279 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0.938995, -0.362 )
script = ExtResource( 1 )
jump_velocit = -1200.0

[node name="FSM" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CharacterRig" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.173004, -43.307 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 4.18641, -2.30441 )
current = true

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 115 )
enabled = true
collision_mask = 2147483651

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2( 45.2548, 117.121 )
enabled = true
collision_mask = 2147483651

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2( -41.0122, 115.707 )
enabled = true
collision_mask = 2147483651

[node name="Health" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -93.4948
margin_top = -176.528
margin_right = 89.5052
margin_bottom = -129.528
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 2 )
anims/invulnerable = SubResource( 3 )
anims/rest = SubResource( 4 )

[node name="Healthbar" parent="." instance=ExtResource( 3 )]
is_pulse = false
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
